# georgios-karakostas.com

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dropbox-photo-sync.yml
content/articles/: 001-first-dummy-article.md  001-refactoring-my-website-in-the-age-of-vibe-coding.md  002-interactive-marimo-dummy.md
content/extra/: CNAME  robots.txt
content/images/photos/explore/: 2013-08-11-133753-71cf651e.json  2013-08-11-133753-824b0684.json  2014-03-17-160227-824b1447.json  (+85 more)
content/notebooks/: dummy_interactive.html
content/pages/: about.md  blog.md  explore.md  iphone.md  photography.md  portraits.md  street.md
docs/: DROPBOX_SYNC_STATE.md  INGEST_PHOTOS_FLOW.md  MANIFESTS.md  SYNC_DROPBOX_INBOX_FLOW.md
dropbox_sync/: api.py  download.py  manifests.py
notebooks/: dummy_interactive.py
photo_ingest/: images.py  pages.py  source.py
plugins/photos/: photos.py
scripts/: ingest_photos.py  sync_dropbox_inbox.py
tests/: test_ingest_photos.py  test_photos_plugin.py  test_sync_dropbox_inbox.py
theme/static/css/: lightbox.css  style.css
theme/static/js/: lightbox-plus-jquery.min.js  lightbox.min.js
theme/templates/: about.html  article.html  base.html  exploration.html  footer.html  gallery.html  header.html  index.html  photography_index.html  portraits.html  street.html
tooling/: __init__.py  ingest_photos.py  sync_dropbox_inbox.py
tooling/dropbox_sync/: __init__.py  api.py  apply.py  auth.py  download.py  finalize.py  manifests.py  paths.py  reconcile.py  state.py
tooling/photo_ingest/: __init__.py  exif.py  results.py  source.py  transaction.py
(+228 files in other folders)
