[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georgios-karakostas-com"
version = "0.1.0"
description = "Personal website powered by Pelican"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anyio==4.3.0",
    "blinker==1.7.0",
    "docutils==0.20.1",
    "feedgenerator==2.1.0",
    "idna==3.15",
    "Jinja2==3.1.6",
    "Markdown==3.8.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "ordered-set==4.1.0",
    "pelican==4.9.1",
    "pillow==12.2.0",
    "Pygments==2.20.0",
    "python-dateutil==2.8.2",
    "pytz==2024.1",
    "rich==13.7.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "Unidecode==1.3.8",
]

[dependency-groups]
dev = [
    "invoke==2.2.0",
    "livereload==2.7.1",
    "pytest==9.0.3",
    "ruff==0.15.17",
]

[tool.ruff.lint.per-file-ignores]
"plugins/photos/__init__.py" = ["F403"]
"publishconf.py" = ["F403"]

[tool.setuptools]
py-modules = []
