[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georgios-karakostas-com"
version = "0.1.0"
description = "Personal website powered by Pelican"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "Markdown==3.8.1",
    "pelican==4.9.1",
    "pillow==12.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.17",
]

[tool.ruff.lint.per-file-ignores]
"plugins/photos/__init__.py" = ["F403"]
"publishconf.py" = ["F403"]

[tool.setuptools]
py-modules = []
